fixed code using deprecated methods