@@ -5,7 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.HashSet;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.DisplayName;
@@ -50,7 +50,7 @@ class TableOptionTest {
   @Test
   @DisplayName("integration with Table: getOptions is live list and hasOption checks identity")
   void testTableOptions() throws MalformedURLException {
-    Schema schema = new Schema(new URL("https://example.com/schema.json"));
+    Schema schema = new Schema(URI.create("https://example.com/schema.json").toURL());
     Table table = new Table(schema, "public", "orders", null, LockEscalation.AUTO, false);
 
     assertTrue(table.getOptions().isEmpty());
